# innosetup-exe-builder

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.MD  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml
src/: gunicorn_conf.py  main.py
src/innosetup_exe_builder/: api.py  app.py  helpers.py
src/memori_exe_builder/: api.py  app.py  helpers.py
