[tool.poetry]
name = "innosetup-exe-builder"
version = "0.1.0"
description = ""
authors = ["Stefanos Koutoupis <skoutoupis@scify.org>", "Paul Isaris <paul@scify.org>"]
readme = "README.md"
packages = [{include = "innosetup_exe_builder"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
black = "^24.3.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
